fix(base-app): RBAC 测试修改