@@ -1,6 +1,7 @@
 package com.blink.base.service.impl;
 
 import cn.hutool.core.bean.BeanUtil;
+import cn.hutool.core.collection.CollUtil;
 import cn.hutool.core.util.ObjectUtil;
 import com.baomidou.mybatisplus.core.conditions.query.LambdaQueryWrapper;
 import com.blink.base.constans.BaseErrCodeConstant;
@@ -10,11 +11,10 @@ import com.blink.base.dto.rsp.QuerySysRoleRspDTO;
 import com.blink.base.dto.rsp.QueryUserRolesRspDTO;
 import com.blink.base.dto.vo.SysRoleVO;
 import com.blink.base.entity.SysRoleDO;
+import com.blink.base.entity.SysRoleMenuRelaDO;
 import com.blink.base.entity.SysRolePermRelaDO;
 import com.blink.base.entity.SysUserRoleRelaDO;
-import com.blink.base.mapper.SysRoleMapper;
-import com.blink.base.mapper.SysRolePermRelaMapper;
-import com.blink.base.mapper.SysUserRoleRelaMapper;
+import com.blink.base.mapper.*;
 import com.blink.base.service.SysRoleService;
 import com.blink.datasource.PageUtils;
 import com.blink.framework.common.exception.BlinkException;
@@ -25,6 +25,8 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Optional;
+import java.util.function.Supplier;
 import java.util.stream.Collectors;
 
 /**
@@ -45,14 +47,22 @@ public class SysRoleServiceImpl implements SysRoleService {
     private SysRolePermRelaMapper rolePermRelaMapper;
 
     @Resource
+    private SysRoleMenuRelaMapper roleMenuRelaMapper;
+
+    @Resource
     private SysUserRoleRelaMapper userRoleRelaMapper;
+
+    @Resource
+    private SysPermissionMapper permissionMapper;
+
+    @Resource
+    private SysMenuMapper sysMenuMapper;
 
     /**
      * 保存 系统角色
      *
      * @param saveParam 入参
      * @return SysRoleVO 显示信息
-     * @throws BlinkException
      */
     @Override
     public SysRoleVO saveSysRole(AddSysRoleReqDTO saveParam) throws BlinkException {
@@ -68,21 +78,27 @@ public class SysRoleServiceImpl implements SysRoleService {
         }
 
         sysRoleMapper.insert(sysRoleDO);
-
         Integer roleId = sysRoleDO.getRoleId();
 
         //分配的权限id集合
         List<Integer> permIds = saveParam.getPermissionIds();
         if (ObjectUtil.isNotEmpty(permIds)) {
-            List<SysRolePermRelaDO> list = permIds.stream()
-                    .map(pid -> {
-                        var rolePerm = new SysRolePermRelaDO();
-                        rolePerm.setRoleId(roleId);
-                        rolePerm.setAcId(pid);
-                        return rolePerm;
-                    }).collect(Collectors.toList());
+            // 验证前端菜单id是否都合法
+            if (dataNotExistCheck(permIds, () -> permissionMapper.selectBatchIds(permIds))) {
+                //存在非法权限id
+                BlinkException.throwBusinessException(BaseErrCodeConstant.PERMISSION_NOT_EXIST);
+            }
+            batchInsertPermissions(permIds, roleId);
+        }
 
-            rolePermRelaMapper.batchInsert(list);
+        List<Integer> menuIds = saveParam.getMenuIds();
+        if (ObjectUtil.isNotEmpty(menuIds)) {
+
+            // 验证前端菜单id是否都合法
+            if (dataNotExistCheck(menuIds, () -> sysMenuMapper.selectBatchIds(menuIds))) {
+                BlinkException.throwBusinessException(BaseErrCodeConstant.MENU_NOT_EXIST);
+            }
+            batchInsertMenus(menuIds, roleId);
         }
 
         var sysRoleVO = new SysRoleVO();
@@ -91,12 +107,11 @@ public class SysRoleServiceImpl implements SysRoleService {
         return sysRoleVO;
     }
 
+
     /**
      * 删除 系统角色
      *
-     * @param deleteParam
-     * @return
-     * @throws BlinkException
+     * @param deleteParam 入参
      */
     @Override
     public void deleteSysRole(DeleteSysRoleReqDTO deleteParam) throws BlinkException {
@@ -112,7 +127,8 @@ public class SysRoleServiceImpl implements SysRoleService {
             }
 
             sysRoleMapper.deleteBatchIds(deleteParam.getIdList());
-            rolePermRelaMapper.deleteBatchIds(deleteParam.getIdList());
+            rolePermRelaMapper.deleteById(deleteParam.getDeleteId());
+            roleMenuRelaMapper.deleteById(deleteParam.getDeleteId());
         } else {
             Long count = userRoleRelaMapper.selectCount(new LambdaQueryWrapper<SysUserRoleRelaDO>()
                     .eq(SysUserRoleRelaDO::getRoleId, deleteParam.getDeleteId()));
@@ -122,6 +138,7 @@ public class SysRoleServiceImpl implements SysRoleService {
             }
             sysRoleMapper.deleteById(deleteParam.getDeleteId());
             rolePermRelaMapper.deleteById(deleteParam.getDeleteId());
+            roleMenuRelaMapper.deleteById(deleteParam.getDeleteId());
         }
 
     }
@@ -129,9 +146,8 @@ public class SysRoleServiceImpl implements SysRoleService {
     /**
      * 更新 系统角色
      *
-     * @param updateParam
-     * @return
-     * @throws BlinkException
+     * @param updateParam 入参
+     * @return SysRoleVO
      */
     @Override
     public SysRoleVO modifySysRole(UpdateSysRoleReqDTO updateParam) throws BlinkException {
@@ -150,33 +166,58 @@ public class SysRoleServiceImpl implements SysRoleService {
         sysRoleMapper.updateById(sysRoleDO);
         Integer roleId = sysRoleDOld.getRoleId();
 
-        //存在新分配权限
-        List<Integer> addPermIds = updateParam.getAddPermissionIds();
-        if (ObjectUtil.isNotEmpty(addPermIds)) {
-            List<SysRolePermRelaDO> addList = addPermIds.stream()
-                    .map(pid -> {
-                        var rolePerm = new SysRolePermRelaDO();
-                        rolePerm.setRoleId(roleId);
-                        rolePerm.setAcId(pid);
-                        return rolePerm;
-                    }).collect(Collectors.toList());
+        //前端传递的权限id
+        List<Integer> permIds = Optional.ofNullable(updateParam.getPermissionIds()).orElse(new ArrayList<>());
+        List<SysRolePermRelaDO> olderPermIds = Optional.ofNullable(rolePermRelaMapper.selectList(new LambdaQueryWrapper<SysRolePermRelaDO>()
+                .eq(SysRolePermRelaDO::getRoleId, roleId))).orElse(new ArrayList<SysRolePermRelaDO>());
 
-            rolePermRelaMapper.batchInsert(addList);
+        //对比获取删除的权限id集合 和新增的权限id集合
+        if (ObjectUtil.isNotEmpty(olderPermIds)) {
+            List<Integer> oldData = olderPermIds.stream().map(SysRolePermRelaDO::getAcId).toList();
+            //oldData 中存在 permIds不存在
+            List<Integer> deleteList = CollUtil.subtract(oldData, permIds).stream().toList();
+
+            if (!deleteList.isEmpty()) {
+                rolePermRelaMapper.deleteBatchByPermIds(deleteList);
+            }
+
+            List<Integer> addList = CollUtil.subtract(permIds, oldData).stream().toList();
+            if (!addList.isEmpty()) {
+                batchInsertPermissions(addList, roleId);
+            }
+
+        } else {
+            if (ObjectUtil.isNotEmpty(permIds)) {
+                batchInsertPermissions(permIds, roleId);
+            }
         }
 
-        //存在取消原有权限分配
-        List<Integer> deletePermIds = updateParam.getDeletePermissionIds();
-        if (ObjectUtil.isNotEmpty(deletePermIds)) {
-            List<SysRolePermRelaDO> deleteList = addPermIds.stream()
-                    .map(pid -> {
-                        var rolePerm = new SysRolePermRelaDO();
-                        rolePerm.setRoleId(roleId);
-                        rolePerm.setAcId(pid);
-                        return rolePerm;
-                    }).collect(Collectors.toList());
+        //前端传递的菜单id
+        List<Integer> menuIds = Optional.ofNullable(updateParam.getMenuIds()).orElse(new ArrayList<>());
+        //数据库中的关联菜单
+        List<SysRoleMenuRelaDO> oldRelaMenus = Optional.ofNullable(roleMenuRelaMapper.selectList(new LambdaQueryWrapper<SysRoleMenuRelaDO>().eq(SysRoleMenuRelaDO::getRoleId, roleId)))
+                                                            .orElse(new ArrayList<>());
+        //对比获取删除的菜单id集合 和新增的菜单id集合
+        if (ObjectUtil.isNotEmpty(oldRelaMenus)) {
+            List<Integer> oldData = oldRelaMenus.stream().map(SysRoleMenuRelaDO::getMenuId).toList();
+            //oldData 中存在 menuIds不存在
+            List<Integer> deleteList = CollUtil.subtract(oldData, menuIds).stream().toList();
 
-            rolePermRelaMapper.deleteBatchIds(deleteList);
+            if (!deleteList.isEmpty()) {
+                roleMenuRelaMapper.deleteBatchByMenuIds(deleteList);
+            }
+
+            List<Integer> addList = CollUtil.subtract(menuIds, oldData).stream().toList();
+            if (!addList.isEmpty()) {
+                batchInsertMenus(addList, roleId);
+            }
+
+        } else {
+            if (ObjectUtil.isNotEmpty(menuIds)) {
+                batchInsertMenus(menuIds, roleId);
+            }
         }
+
 
         var sysRoleVO = new SysRoleVO();
         BeanUtil.copyProperties(sysRoleDO, sysRoleVO);
@@ -184,12 +225,12 @@ public class SysRoleServiceImpl implements SysRoleService {
         return sysRoleVO;
     }
 
+
     /**
      * 查询 系统角色 列表
      *
-     * @param queryParam
-     * @return
-     * @throws BlinkException
+     * @param queryParam 查询参数
+     * @return QuerySysRoleRspDTO
      */
     @Override
     public QuerySysRoleRspDTO getSysRoleList(QuerySysRoleReqDTO queryParam) throws BlinkException {
@@ -205,9 +246,8 @@ public class SysRoleServiceImpl implements SysRoleService {
     /**
      * 根据用户信息查询 用户角色
      *
-     * @param queryParam
+     * @param queryParam 查询参数
      * @return {@link QueryUserRolesRspDTO}
-     * @throws BlinkException
      */
     @Override
     public QueryUserRolesRspDTO getSysRolesByUser(QueryUserRolesReqDTO queryParam) throws BlinkException {
@@ -223,5 +263,57 @@ public class SysRoleServiceImpl implements SysRoleService {
         return queryUserRolesRspDTO;
     }
 
+    /**
+     * 批量插入 角色权限关联表
+     *
+     * @param permIds 权限id集合
+     * @param roleId  角色id
+     */
+    private void batchInsertPermissions(List<Integer> permIds, Integer roleId) {
+        List<SysRolePermRelaDO> addList = new ArrayList<>(permIds.size());
+
+        permIds.forEach(pid -> {
+            var rolePerm = new SysRolePermRelaDO();
+            rolePerm.setRoleId(roleId);
+            rolePerm.setAcId(pid);
+            addList.add(rolePerm);
+        });
+        rolePermRelaMapper.batchInsert(addList);
+    }
+
+    /**
+     * 批量插入角色菜单关联表
+     *
+     * @param menuIds 菜单id集合
+     * @param roleId  角色id
+     */
+    private void batchInsertMenus(List<Integer> menuIds, Integer roleId) {
+
+        List<SysRoleMenuRelaDO> list = menuIds.stream()
+                .map(mid -> {
+                    var temp = new SysRoleMenuRelaDO();
+                    temp.setMenuId(mid);
+                    temp.setRoleId(roleId);
+                    return temp;
+                }).collect(Collectors.toList());
+
+        roleMenuRelaMapper.batchInsert(list);
+    }
+
+    /**
+     * 判断集合数据 是否合法
+     *
+     * @param paramFormOutSide 外部传递的参数
+     * @param select           sql
+     * @return true 存在数据库 不存在的数据 false 合法
+     */
+    private boolean dataNotExistCheck(List<?> paramFormOutSide, Supplier<List<?>> select) {
+        List<?> existList = select.get();
+        if (existList != null && !existList.isEmpty()) {
+            //存在非法菜单id
+            return existList.size() != paramFormOutSide.size();
+        }
+        return true;
+    }
 
 }
